Fixed CSS error that caused wrong margin

--- a/remote/static/css/main.css
+++ b/remote/static/css/main.css
@@ -31,7 +31,6 @@ div.game {
  margin-top: 5px;
  padding: 2px;
  position: relative;
- width: 100%;
 }
 
 div.game:hover {
